css/style.css
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body, html {
    font-family: "Montserrat", sans-serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    scroll-behavior: smooth;
}

:root {
    --black: #292929;
    --anime: #eb4343;
    --photography: #2fcf5f;
    --lifestyle: #f3933a;
    --philanthropy: #2eb2c9;
}

header {
    width: 100%;
    height: 200px;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: url(../images/header-image.jpg);
    background-attachment: fixed;
    background-position: 50% -300px;
    background-repeat: no-repeat;
    background-size: cover;
}

.header-items-container {
    width: 94%;
    height: 100%;
    display: flex;
    justify-content: left;
    align-items: center;
}

.header-text-wrapper {
    height: auto;
    width: auto;
    color: white;
}

nav {
    z-index: 999999;
    width: 100%;
    height: 100px;
    background: transparent;
    backdrop-filter: blur(10px);
    position: sticky;
    top: 0;
    box-shadow: 0 0 8px rgba(0, 0, 0, .07);
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-all-container {
    position: relative;
    width: 94%;
    height: 100%;
}

.nav-logo-container {
    width: 150px;
    height: 100%;
    font-family: "Great Vibes", cursive;
    font-weight: 400;
    font-style: normal;
    font-size: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-links-container {
    position: absolute;
    right: 0;
    top: 0;
    width: auto;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 20px;
}

.nav-links-container a {
    text-decoration: none;
    color: var(--black);
}

#contact {
    padding: 15px 30px;
    border-radius: 10px;
    background-color: var(--black);
    color: white;
}

::before {
    color: white;
    margin-left: 10px;
}

.content-container {
    display: flex;
    gap: 40px;
    padding: 40px 70px;
    color: white;
}

.main-content {
    width: 70%;
    background-color: rgb(236, 236, 236);
    display: flex;
    flex-direction: column;
}

.sidebar {
    width: 30%;
}

.subscribe-box {
    color: var(--black);
    padding: 20px;
    border-radius: 10px;
    margin-bottom: 40px;
}

.subscribe-box h2 {
    margin-bottom: 10px;
}

.subscribe-box input {
    width: 100%;
    padding: 10px;
    margin: 10px 0;
    border: none;
    border-radius: 5px;
    font-size: 16px;
}

.subscribe-box button {
    width: 100%;
    padding: 10px;
    background-color: var(--black);
    border: none;
    color: white;
    font-size: 16px;
    cursor: pointer;
    border-radius: 5px;
}



.categories {
    position: sticky;
    top: 120px;
}

.categories h3 {
    padding-left: 17px;
    margin-bottom: 10px;
    color: var(--black);
}

.categories ul {
    list-style: none;
    padding-left: 20px;
}

.categories li {
    margin-bottom: 10px;
    display: flex;
    align-items: center;
    color: var(--black);
}

.categories li a {
    color: var(--black);
    text-decoration: none;
    padding: 8px 15px;
    border-radius: 10px;
    transition: all 0.2s;
    border: 1px solid rgb(214, 214, 214);
}

.categories .dot {
    width: 10px;
    height: 10px;
    border-radius: 50%;
    margin-right: 10px;
}

.post {
    padding: 20px;
    border-radius: 10px;
    margin-bottom: 20px;
    color: black;
}

.post-image {
    position: relative;
}

.post-image img {
    width: 100%;
    border-radius: 10px;
}

.category-tag {
    position: absolute;
    top: 10px;
    right: 10px;
    background-color: #00ccff;
    padding: 5px 10px;
    border-radius: 5px;
    font-size: 14px;
    color: white;
}

.anime { background-color: var(--anime); }
.photography { background-color: var(--photography); }
.lifestyle { background-color: var(--lifestyle); }
.philanthropy { background-color: var(--philanthropy); }

#cat1:hover {
    color: white;
    background-color: var(--anime);
    border: none;
}
#cat2:hover {
    color: white;
    background-color: var(--photography);
    border: none;
}
#cat3:hover {
    color: white;
    background-color: var(--lifestyle);
    border: none;
}
#cat4:hover {
    color: white;
    background-color: var(--philanthropy);
    border: none;
}

.active {
    background-color: var(--black);
    color: white !important;
}

.post h2 {
    margin-top: 20px;
    font-size: 24px;
}

.post p {
    margin-top: 10px;
    font-size: 16px;
}

.post-meta {
    display: flex;
    align-items: center;
    margin-top: 20px;
}

.author-image {
    width: 40px;
    height: 40px;
    border-radius: 50%;
    margin-right: 10px;
}

.author-name {
    margin-right: 10px;
    font-weight: bold;
}

.post-date {
    color: #888;
}

@media screen and (max-width: 992px) {
    .content-container {
        flex-direction: column;
        padding: 20px;
    }

    .sidebar {
        width: 100%;
        order: 1;
    }

    .main-content {
        width: 100%;
        order: 2;
    }

    .post {
        margin-bottom: 40px;
    }

    .categories {
        position: sticky;
        margin-top: 20px;
    }

    .categories ul {
        display: flex;
        gap: 20px;
    }
}

